--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,11 @@ Variables
   --clr-green-dark: hsl(125, 67%, 44%);
   --clr-green-light: hsl(125, 71%, 66%);
   --clr-black: #222;
+  --clr-1: #e3e2df;
+  --clr-2: #e3afbc;
+  --clr-3: #ee4c7c;
+  --clr-4: #9a1750;
+  --clr-5: #5d001e;
   --transition: all 0.3s linear;
   --spacing: 0.1rem;
   --radius: 0.25rem;
@@ -58,9 +63,10 @@ Global Styles
   box-sizing: border-box;
 }
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  background: var(--clr-grey-10);
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  /* background: var(--clr-grey-10); */
+  background: var(--clr-1);
   color: var(--clr-grey-1);
   line-height: 1.5;
   font-size: 0.875rem;
@@ -123,22 +129,27 @@ p {
 
 .btn {
   text-transform: uppercase;
-  background: var(--clr-primary-5);
-  color: var(--clr-primary-1);
+  /* background: var(--clr-primary-5);
+  color: var(--clr-primary-1); */
+  background: var(--clr-5);
+  color: var(--clr-2);
   padding: 0.375rem 0.75rem;
   letter-spacing: 1px;
   display: inline-block;
   transition: var(--transition);
   font-size: 0.875rem;
-  border: 2px solid var(--clr-primary-5);
+  border: 2px solid var(--clr-5);
   cursor: pointer;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
   border-radius: var(--radius);
 }
 .btn:hover {
-  color: var(--clr-primary-5);
+  /* color: var(--clr-primary-5);
   background: var(--clr-primary-8);
-  border-color: var(--clr-primary-8);
+  border-color: var(--clr-primary-8); */
+  color: var(--clr-5);
+  background: var(--clr-4);
+  border-color: var(--clr-4);
 }
 /* section */
 .section {
@@ -157,11 +168,11 @@ p {
     width: 95vw;
   }
 }
-main {
+/* main {
   min-height: 100vh;
   display: grid;
   place-items: center;
-}
+} */
 /*
 =============== 
 Lorem Ipsum
@@ -169,7 +180,8 @@ Lorem Ipsum
 */
 h3 {
   text-transform: uppercase;
-  color: var(--clr-primary-1);
+  /* color: var(--clr-primary-1); */
+  color: var(--clr-5);
 }
 .lorem-form {
   text-transform: capitalize;
@@ -182,7 +194,9 @@ h3 {
 }
 label {
   font-size: 1.25rem;
-  color: var(--clr-primary-1);
+  /* color: var(--clr-primary-1); */
+  color: var(--clr-4);
+  font-weight: 600;
 }
 input {
   padding: 0.25rem 0.5rem;
@@ -191,11 +205,17 @@ input {
   border: none;
   margin: 0 0.5rem;
   font-size: 1.25rem;
+  color: var(--clr-4);
+  font-weight: 600;
 }
 button {
-  background: var(--clr-primary-10);
+  /* background: var(--clr-primary-10); */
+  background: var(--clr-5);
 }
 .result {
   margin-bottom: 2rem;
 }
-
+.lorem-text p {
+  /* background-color: var(--clr-2); */
+  color: var(--clr-5);
+}
